--- a/css/localfont.css
+++ b/css/localfont.css
@@ -2,5 +2,5 @@
 
 @font-face {
   font-family: 'hirakaku';
-  src: url('../../fonts/HiraKakuProN-W3-AlphaNum-01.otf') format('opentype');
+  src: url('../fonts/HiraKakuProN-W3-AlphaNum-01.otf') format('opentype');
 }
